[package]
name = "titan-fitness-purchaser"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
fantoccini = "0.17"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"